--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Princess Ortega
 #logo:/assets/img/headshot_circle.png
 description:Product Manager | 2 Products Launched | UX/UI
-show_downloads: true
+#show_downloads: true
 theme: jekyll-theme-minimal
