--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Princess Ortega
-#logo:/_circle.png
+logo:/_circle.png
 description:Product Manager 
 #show_downloads: true
 theme: jekyll-theme-minimal
