--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Princess Ortega
-logo:assets/Princess_circle.png
+logo:assets/img/Princess_circle.png
 description:Product Manager 
 #show_downloads: true
 theme: jekyll-theme-minimal
